--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-messages": "^1.5.0",
     "angular-material": "^1.0.5",
     "angular-aria": "^1.5.0",
-    "ngmap": "^1.16.7"
+    "ngmap": "^1.16.7",
+    "angularjs-geolocation": "^0.1.1"
   }
 }
