--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-material": "^1.0.5",
     "angular-aria": "^1.5.0",
     "ngmap": "^1.16.7",
-    "angularjs-geolocation": "^0.1.1"
+    "angularjs-geolocation": "^0.1.1",
+    "angular-resource": "^1.5.0"
   }
 }
