--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,8 @@
     "angular-aria": "^1.5.0",
     "ngmap": "^1.16.7",
     "angularjs-geolocation": "^0.1.1",
-    "angular-resource": "^1.5.0"
+    "angular-resource": "^1.5.0",
+    "angular-sanitize": "^1.5.0",
+    "angular-cookies": "^1.5.0"
   }
 }
